src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__numeric__pg_size_pretty.snap
---
source: src/expr/src/scalar/func/impls/numeric.rs
expression: "#[sqlfunc(sqlname = \"pg_size_pretty\", preserves_uniqueness = false)]\nfn pg_size_pretty(mut a: Numeric) -> Result<String, EvalError> {\n    let mut cx = numeric::cx_datum();\n    let units = [\"bytes\", \"kB\", \"MB\", \"GB\", \"TB\", \"PB\"];\n    for (pos, unit) in units.iter().rev().skip(1).rev().enumerate() {\n        if Numeric::from(-10239.5) < a && a < Numeric::from(10239.5) {\n            if pos > 0 {\n                cx.round(&mut a);\n            }\n            return Ok(format!(\"{} {unit}\", a.to_standard_notation_string()));\n        }\n        cx.div(&mut a, &Numeric::from(1024));\n        numeric::munge_numeric(&mut a).unwrap();\n    }\n    cx.round(&mut a);\n    Ok(format!(\"{} {}\", a.to_standard_notation_string(), units.last().unwrap()))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct PgSizePretty;
impl crate::func::EagerUnaryFunc for PgSizePretty {
    type Input<'a> = Numeric;
    type Output<'a> = Result<String, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        pg_size_pretty(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn preserves_uniqueness(&self) -> bool {
        false
    }
}
impl std::fmt::Display for PgSizePretty {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("pg_size_pretty")
    }
}
fn pg_size_pretty(mut a: Numeric) -> Result<String, EvalError> {
    let mut cx = numeric::cx_datum();
    let units = ["bytes", "kB", "MB", "GB", "TB", "PB"];
    for (pos, unit) in units.iter().rev().skip(1).rev().enumerate() {
        if Numeric::from(-10239.5) < a && a < Numeric::from(10239.5) {
            if pos > 0 {
                cx.round(&mut a);
            }
            return Ok(format!("{} {unit}", a.to_standard_notation_string()));
        }
        cx.div(&mut a, &Numeric::from(1024));
        numeric::munge_numeric(&mut a).unwrap();
    }
    cx.round(&mut a);
    Ok(format!("{} {}", a.to_standard_notation_string(), units.last().unwrap()))
}
